--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -83,7 +83,7 @@
                     class="form-check-label text-dark text-muted"
                     for="rememberMe"
                   >
-                    Remember Me
+                    Να με θυμάσαι
                   </label>
                 </div>
                 <p class="text-end mb-0">
@@ -91,7 +91,7 @@
                     routerLink="/forgot-password"
                     class="text-decoration-none"
                     style="color: #2bbcaf; font-weight: bold"
-                    >Ξέχασα τον Κωδικό?</a
+                    >Ξεχάσατε τον κωδικό?</a
                   >
                 </p>
               </div>
