--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   class="container-fluid vh-100 d-flex justify-content-center align-items-center background-register"
 >
   <div class="row d-flex justify-content-center align-items-center">
@@ -13,7 +13,6 @@
     <div class="col-12 col-sm-10">
       <div class="card shadow border-0">
         <div class="card-body p-0">
-          <!-- Register Box-->
           <div class="col-12 px-3 px-sm-5 py-4">
             <h3 class="text-center" style="color: #2bbcaf; font-weight: bold">
               Εγγραφή
@@ -130,6 +129,146 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div> -->
+<div
+  class="container-fluid vh-100 d-flex justify-content-around align-items-center background-register px-5"
+>
+  <div class="row d-flex align-items-center px-5">
+    <div class="col-12 text-center m-0 p-0">
+      <img
+        src="../../../assets/photo/ScoutPlayer-Logo(1).png"
+        width="150px"
+        alt=""
+        class="mb-2"
+      />
+    </div>
+    <div class="col-4 pb-5 pt-4 px-3">
+      <div class="card shadow border-0 p-4">
+        <div class="card-body p-0">
+          <img
+            src="../../../assets/photo/football-player.png"
+            width="100px"
+            alt=""
+            class="mb-3"
+          />
+          <h2 class="" style="color: #2bbcaf; font-weight: bold">
+            ΠΟΔΟΣΦΑΙΡΙΣΤΗΣ
+          </h2>
+          <p style="font-size: 13px">
+            Γίνε μέλος και εσύ στην μεγαλύτερη πλατφόρμα ποδοσφαιριστών στην
+            Ελλάδα
+          </p>
+          <hr />
+          <h1 style="color: #2bbcaf; font-size: 40px; font-weight: bold">
+            20€
+            <span style="color: #000; font-size: 14px; font-weight: bold"
+              >/ ΧΡΟΝΟ</span
+            >
+          </h1>
+          <p class="mb-4">
+            Κέρδισε προνομιακή
+            <span style="font-weight: bold">έκπτωση 20%</span> στο 1ο σου
+            <a
+              href="https://footballplayervideos.gr"
+              class="text-decoration-none"
+              id="football-player-videos"
+              target="_blank"
+              >video-highlights</a
+            >
+            με την εγγραφή σου στην πλατφόρμα.
+          </p>
+          <button
+            class="form-control text-white"
+            style="background-color: #2bbcaf"
+          >
+            Ξεκίνα εδώ
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-4 pb-5 pt-4 px-3">
+      <div class="card shadow border-0 p-4">
+        <div class="card-body p-0">
+          <img
+            src="../../../assets/photo/coach.png"
+            width="100px"
+            alt=""
+            class="mb-3"
+          />
+          <h2 style="color: #2bbcaf; font-weight: bold">ΠΡΟΠΟΝΗΤΗΣ</h2>
+          <p style="font-size: 13px">
+            Γίνε μέλος στην πλατφόρμα και αναζήτησε τον ποδοσφαιριστή που σου
+            ταιριάζει.
+          </p>
+          <hr />
+          <h1 style="color: #2bbcaf; font-size: 40px; font-weight: bold">
+            40€
+            <span style="color: #000; font-size: 14px; font-weight: bold"
+              >/ ΧΡΟΝΟ</span
+            >
+          </h1>
+          <p class="mb-4">
+            Κέρδισε
+            <span style="font-weight: bold">έκπτωση 10€ (promo code)</span> εάν
+            προτείνεις την πλατφόρμα και σε άλλους για να εγγραφούν.
+          </p>
+          <button
+            class="form-control text-white"
+            style="background-color: #ff6d2a"
+          >
+            Ξεκίνα εδώ
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-4 pb-5 pt-4 px-3">
+      <div class="card shadow border-0 p-4">
+        <div class="card-body p-0">
+          <img
+            src="../../../assets/photo/agent.png"
+            width="100px"
+            alt=""
+            class="mb-3"
+          />
+          <h2 style="color: #2bbcaf; font-weight: bold">
+            ΕΚΠΡΟΣΩΠΟΣ ΠΟΔΟΣΦΑIΡΙΣΤΩΝ
+          </h2>
+          <p style="font-size: 13px">
+            Γίνε μέλος και εσύ στην μεγαλύτερη πλατφόρμα μάνατζερ στην Ελλάδα
+          </p>
+          <hr />
+          <h1 style="color: #2bbcaf; font-size: 40px; font-weight: bold">
+            40€
+            <span style="color: #000; font-size: 14px; font-weight: bold"
+              >/ ΧΡΟΝΟ</span
+            >
+          </h1>
+          <p class="mb-4">
+            Κέρδισε <span style="font-weight: bold">έκπτωση 10€</span> εάν
+            φέρεις 10 ποδοσφαιριστές και εγγραφούν στην πλατφόρμα.
+          </p>
+          <button
+            class="form-control text-white"
+            style="background-color: #474f85"
+          >
+            Ξεκίνα εδώ
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-12">
+      <p class="text-center text-dark">
+        Έχεις ήδη λογαριασμό?
+        <a
+          routerLink="/login"
+          class="text-decoration-none px-1"
+          style="color: #fff; font-weight: bold"
+        >
+          Σύνδεση
+        </a>
+      </p>
     </div>
   </div>
 </div>
