changing components directories

--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -173,7 +173,7 @@
   </div>
 </div>
 
-<div
+<!-- <div
   class="container-fluid vh-100 d-flex justify-content-around align-items-center background-register px-5"
 >
   <div class="row d-flex align-items-center px-5">
@@ -315,4 +315,4 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
