--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     >
       Σύνδεση
     </button>
-    <button mat-raised-button color="warn" routerLink="/register" class="mx-1">
+    <button mat-raised-button color="warn" routerLink="/pricing" class="mx-1">
       Εγγραφή
     </button>
   </div>
